--- a/AZ-700/m02.md
+++ b/AZ-700/m02.md
@@ -7,7 +7,7 @@
 ■VPN接続
 
 - 講義:
-  - [仮想ネットワークゲートウェイ](virtual-../network/virtual-network-gateway.md)
+  - [仮想ネットワークゲートウェイ](../network/virtual-network-gateway.md)
   - [VPN](../network/vpn.md)
 - ラボ: [M02-ユニット 3 仮想ネットワーク ゲートウェイを作成および構成する](lab-m02-u03.md)
 
