--- a/AZ-700/m05.md
+++ b/AZ-700/m05.md
@@ -4,5 +4,10 @@
 
 ■Azure Application Gateway
 
+- 講義: [Azure Application Gateway](../network/appgw.md)
+- ラボ: [M05-ユニット 4 Azure Application Gateway をデプロイする](lab-m05-u04.md)
+
 ■Azure Front Door
 
+- 講義: [Azure Front Door](../network/front-door.md)
+- ラボ: [M05-ユニット 6 Azure portal を使用して高可用性 Web アプリケーションのフロント ドアを作成する](lab-m05-u06.md)
