--- a/AZ-700/m05.md
+++ b/AZ-700/m05.md
@@ -1,6 +1,8 @@
 # モジュール5: Azure での HTTP(S) トラフィックの負荷分散
 
-※準備中
+■前提知識: SSL/TLS
+
+- 講義: [SSL/TLS](ssl-tls.md)
 
 ■Azure Application Gateway
 
@@ -11,3 +13,4 @@
 
 - 講義: [Azure Front Door](../network/front-door.md)
 - ラボ: [M05-ユニット 6 Azure portal を使用して高可用性 Web アプリケーションのフロント ドアを作成する](lab-m05-u06.md)
+
