--- a/AZ-700/m02.md
+++ b/AZ-700/m02.md
@@ -15,6 +15,8 @@
 
 - 講義: [Azure Virtual WAN (仮想 WAN)](../AZ-104/mod05-04-virtualwan.md)
 - ラボ: [M02-ユニット 7 Azure portal を使用して仮想 WAN を作成する](lab-m02-u07.md)
+  - タスク1～3は省略します（おおまかな手順のみ確認いただければOKです）
+  - タスク4のクリーンアップ（不要リソース削除）のみ実施してください
 
 ■NVA (Network Virtual Appliance)
 
