--- a/AZ-700/m04.md
+++ b/AZ-700/m04.md
@@ -1,5 +1,10 @@
 # モジュール4: Azure での非 HTTP(S) トラフィックの負荷分散
 
+■Azureの負荷分散サービス
+
+- [Azureの負荷分散サービス](../AZ-500/pdf/mod2/負荷分散サービス.pdf)
+- Azure portalでの負荷分散サービスの選択（デモ）
+
 ■Azure Load Balancer
 
 - 講義: [Azure Load Balancer](network/azure-load-balancer.md)
