--- a/AZ-700/m04.md
+++ b/AZ-700/m04.md
@@ -8,6 +8,8 @@
 ■Azure Load Balancer
 
 - 講義: [Azure Load Balancer](network/azure-load-balancer.md)
+- 参考: [エフェメラルポート(Wikipedia)](https://ja.wikipedia.org/wiki/%E3%82%A8%E3%83%95%E3%82%A7%E3%83%A1%E3%83%A9%E3%83%AB%E3%83%9D%E3%83%BC%E3%83%88)
+  - 送信元のポート番号。ランダムに決定される。
 - ラボ: [M04-ユニット4 Azure Load Balancer を作成および構成する](lab-m04-u04.md)
 
 ■Azure Traffic Manager
