--- a/AZ-700/m06.md
+++ b/AZ-700/m06.md
@@ -1,13 +1,28 @@
 # モジュール6: ネットワークセキュリティを設計して実装する
 
-※準備中
-
 ■Azure DDoS Protection
+
+- 講義:
+  - [DDoS攻撃の概要](../SC/ddos.md)
+  - [Azure DDoS Protection](../network/ddos-protection.md)
+- ラボ: [M06-ユニット 4 Azure portal を使用して仮想ネットワーク上に DDoS Protection を構成する](lab-m06-u04.md)
 
 ■ネットワークセキュリティグループ
 
+- 講義:
+  - [ネットワークセキュリティグループ(NSG)](../network/nsg.md)
+  - [アプリケーションセキュリティグループ(ASG)](../network/asg.md)
+
 ■Azure Firewall
+
+- 講義: [Azure Firewall](../AZ-104/mod04-04-firewall.md)
+- ラボ: [M06-ユニット 7 Azure portal を使用して Azure Firewall をデプロイして構成する](lab-m06-u07.md)
 
 ■Azure Firewall Manager
 
-■Azure Front Door + Azure Web Application Firewall (Azure WAF)
+- 講義: [Azure Firewall Manager](azure-firewall-manager.md)
+- ラボ: [M06-ユニット 9 Azure Firewall Manager を使用して仮想ハブのセキュリティを保護する](lab-m06-u09.md)
+
+■Azure Web Application Firewall (Azure WAF)
+
+- 講義: [Azure Web Application Firewall](../AZ-303/mod05-07-waf.md)
