--- a/AZ-700/m07.md
+++ b/AZ-700/m07.md
@@ -1,14 +1,16 @@
 # モジュール7: Azure サービスへのプライベート アクセスの設計と実装
 
-※準備中
+■サービスエンドポイント / プライベートエンドポイント
 
-
-■サービスエンドポイント
-
-
-■Azure Private Link(プライベートエンドポイント)
-
+- 講義:
+  - PDF資料: [概要](../AZ-104/pdf/mod06/サービスエンドポイントvsプライベートエンドポイント.pdf)
+  - PDF資料: [設定例](../AZ-500/pdf/mod2/サービスエンドポイントとプライベートエンドポイント設定例.pdf)
+- [ラボ: M07-ユニット 5 仮想ネットワーク サービス エンドポイントを使用して、PaaS リソースへのネットワーク アクセスを制限する](lab-m07-u05.md)
 
 ■Azure App Serviceの「仮想ネットワーク統合」(vnet integration)
 
-→ [仮想ネットワーク統合](vnet-integration.md)
+- 講義:
+  - [Azure App Service](../AZ-305/app-service.md)
+  - [仮想ネットワーク統合](vnet-integration.md)
+- ラボ:
+  - [M07-ユニット 6 Azure PowerShell を使用して Azure プライベート エンドポイントを作成する](lab-m07-u06.md)
