--- a/AZ-700/m08.md
+++ b/AZ-700/m08.md
@@ -1,8 +1,12 @@
 # モジュール8: ネットワーク監視を設計して実装する
 
-※準備中
+■Azure Monitor / Log Analytics
 
-■Azure Monitor
+- 講義:
+  - [Azure Monitor](../AZ-104/pdf/mod11/Azure%20Monitor.pdf)
+  - [Log Analytics](../AZ-304/mod09-03-log-analytics.md)
+- ラボ: [M08-ユニット 3 Azure Monitor を使用してロード バランサー リソースを監視する](lab-m08-u03.md)
 
 ■Azure Network Watcher
 
+- 講義: [Azure Network Watcher](../AZ-104/pdf/mod11/Network%20Watcher.pdf)
