--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -3,7 +3,9 @@
 ## ハンズオン: 準備
 
 - [開発環境として使用するWindows VMを起動](vm/vm-create.md)
-- [Windows VMにリモートデスクトップで接続](vm/rdp.md)
+- Windows VMに接続する
+  - [リモートデスクトップで接続（おすすめ）](vm/rdp.md)
+  - [Azure Bastionで接続（リモートデスクトップが上手く動かない場合におすすめ）](vm/bastion.md)
 - 接続したVM内で、以下の設定を行う
   - [Microsoft Edge の起動と初期設定](edge.md)
   - 必要なツールをインストール
