--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -5,7 +5,7 @@
 - [開発環境として使用するWindows VMを起動](vm/vm-create.md)
 - Windows VMに接続する
   - [リモートデスクトップで接続（おすすめ）](vm/rdp.md)
-  - [Azure Bastionで接続（リモートデスクトップが上手く動かない場合におすすめ）](vm/bastion.md)
+  - [Azure Bastionで接続（リモートデスクトップで接続できない場合はこちら）](vm/bastion.md)
 - 接続したVM内で、以下の設定を行う
   - [Microsoft Edge の起動と初期設定](edge.md)
   - 必要なツールをインストール
