コンテナー比較

--- a/AZ-305/m02.md
+++ b/AZ-305/m02.md
@@ -17,6 +17,7 @@
     - [Azure Batch](azure-batch.md)
   - マイクロサービス
     - [Azure Container Apps](container-apps.md)
+  - 参考: [コンテナーサービスの比較](../AZ-204/pdf/mod05/コンテナー比較.pdf)
   - [知識チェックとケーススタディ](day3-lp4-m1-check.md)
   - ケーススタディ: 30分演習、30分発表
     - [コンピュート](casestudy2.md)
