--- a/SC-300/lp01.md
+++ b/SC-300/lp01.md
@@ -8,6 +8,7 @@
   - Azure ADの概要
     - [Azure AD入門](../AzureAD/Azure%20AD入門.pdf)
     - [ライセンス](../AzureAD/license.md)
+    - [Microsoft Entra](../SC/entra.md)
     - [会社ブランドの構成](../AzureAD/brand.md)
     - ロール
       - [ロール・ポリシー全体像](../AZ-104/pdf/mod02/ロール・ポリシー全体像.pdf)
@@ -36,17 +37,17 @@
 ■ ラボ手順書
 
 英語版
-https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/tree/master/Instructions/Labs
 
 日本語翻訳版
-https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP
-
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/tree/main/Instructions/Labs
 
 ■ ラボの概要
 
 
 - 00
-  - Azure AD P2試用版ライセンス有効化
+  - 前半（Azure Active Directory Premium P2 試用版ライセンスを追加）のみ実施
+  - 後半（Azure Pass を引き換える）はスキップ
 - 01
   - ユーザー作成
   - 「アプリケーション管理者」ロールを割り当て・割り当てを削除
