--- a/SC-300/lp01.md
+++ b/SC-300/lp01.md
@@ -8,14 +8,16 @@
   - Azure ADの概要
     - [Azure AD入門](../AzureAD/Azure%20AD入門.pdf)
     - [ライセンス](../AzureAD/license.md)
+    - [アクセス方法](../AzureAD/urls.md)
     - [Microsoft Entra](../SC/entra.md)
+  - カスタマイズ
     - [会社ブランドの構成](../AzureAD/brand.md)
-    - ロール
-      - [ロール・ポリシー全体像](../AZ-104/pdf/mod02/ロール・ポリシー全体像.pdf)
-      - [Azure ADロール](../AzureAD/role.md)
-      - [管理単位](../AzureAD/administrative-units.md)
-    - カスタムドメイン
+    - [カスタムドメインの割り当て](../AzureAD/custom-domain.md)
       - ラボ 02 Azure ADのカスタマイズ
+  - ロール
+    - [ロール・ポリシー全体像](../AZ-104/pdf/mod02/ロール・ポリシー全体像.pdf)
+    - [Azure ADロール](../AzureAD/role.md)
+    - [管理単位](../AzureAD/administrative-units.md)
 - モジュール2 ID を作成、構成、および管理する
   - ユーザー作成
   - グループ作成
