--- a/SC-300/lp01.md
+++ b/SC-300/lp01.md
@@ -2,6 +2,11 @@
 
 # ラーニングパス 1 ID 管理ソリューションを実装する
 
+■Microsoft Learn
+
+
+
+■講義
 
 - ラボ00（Premium P2ライセンス有効化）
 - モジュール1 Azure Active Directory の初期構成を実装する
@@ -38,11 +43,14 @@
 
 ■ ラボ手順書
 
-英語版
+英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
 https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/tree/master/Instructions/Labs
 
-日本語翻訳版
+日本語翻訳版（若干古い可能性があります）
 https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/tree/main/Instructions/Labs
+
+ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/archive/refs/heads/master.zip
 
 ■ ラボの概要
 
