--- a/SC-300/lp02.md
+++ b/SC-300/lp02.md
@@ -1,11 +1,71 @@
 [← ラーニングパス1](lp01.md)
 [→ ラーニングパス3](lp03.md)
 
+# ラーニングパス2 認証およびアクセス管理ソリューションを実装する
 
-- ラーニングパス2 認証およびアクセス管理ソリューションを実装する
-  - 多要素認証
-  - ユーザー認証のオプション(パスワードレス等)
-  - 条件付きアクセス
-  - Identity Protection
-  - Azureリソースのアクセス管理
-    - ロール/マネージドID/Key Vault
+■Microsoft Learn
+
+https://learn.microsoft.com/ja-jp/training/paths/implement-authentication-access-management-solution/
+
+■講義
+
+- モジュール1 多要素認証(MFA)
+  - [MFA](../AzureAD/mfa.md)
+  - ラボ08 MFA有効化
+- モジュール2 ユーザー認証のオプション(パスワードレス等)
+  - [パスワードレス認証](../SC/passwordless.md)
+  - [OATH](../SC/oath.md)
+  - [FIDO](../SC/fido.md)
+  - [スマートロックアウト](../SC/smart-lockout.md)
+    - ラボ12 Azure AD スマートロックアウト
+  - セルフサービスパスワードリセット
+    - ラボ09 セルフサービスパスワードリセットの有効化
+  - ラボ10 Windows VM / Linux VMでのAzure AD認証
+- モジュール3 条件付きアクセス
+  - [Azure AD 条件付きアクセス](../SC/conditional-access.md)
+  - ラボ13 条件付きアクセス
+- モジュール4 Identity Protection
+  - [Azure AD Identity Protection](../AZ-500/mod01-03-aad-idp.md)
+  - ラボ14/15 Azure AD Identity Protection
+- モジュール5 Azureリソースのアクセス管理
+  - [Azureの認証と承認](../SC/pdf/Azureの認証と承認.pdf)
+  - [マネージドID](../AZ-305/managed-id.md)
+  - Key Vault アクセス ポリシー / RBAC
+  - ラボ11 Azureロール + PIM
+  - ラボ16 Key Vault / マネージドID
+
+■ ラボ手順書
+
+英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/tree/master/Instructions/Labs
+
+日本語翻訳版（若干古い可能性があります/番号重複注意）
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/tree/main/Instructions/Labs
+
+- [ラボ08](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_08_EnableAzureADMultiFactorAuthentication.md)
+- [ラボ09](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_09_ConfigureAndDeploySelfServicePasswordReset.md)
+- [ラボ10](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_10_AzureADAuthenticationForWindowsAndLinuxVM.md)
+- [ラボ11](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_11_AssignAzureResourceRolesInPrivilegedIdentityManagement.md)
+- [ラボ12](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_12_ManageAzureADSmartLockoutValues.md)
+- [ラボ13](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_13_ImplementAndTestAConditionalAccessPolicy.md)
+- [ラボ14](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_14_EnableSignRiskPolicy.md)
+- [ラボ15](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_15_ConfigureAAD_MultiFactorAuthRegPolicy.md)
+- [ラボ16](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_16_UsingAzureKeyVaultForManagedIdentities.md)
+
+■ ラボのファイル
+
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/archive/refs/heads/master.zip
+
+ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります。
+
+■ ラボの概要
+
+- ラボ08 MFA有効化
+- ラボ09 セルフサービスパスワードリセットの有効化
+- ラボ10 Windows VM / Linux VMでのAzure AD認証
+- ラボ11 Azureロール + PIM
+- ラボ12 Azure AD スマートロックアウト
+- ラボ13 条件付きアクセス
+- ラボ14 Azure AD Identity Protection / ユーザーリスク・サインインリスクポリシー
+- ラボ15 Azure AD Identity Protection / MFA登録ポリシー
+- ラボ16 Key Vault / マネージドID
