--- a/SC-300/lp02.md
+++ b/SC-300/lp02.md
@@ -14,8 +14,8 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-authentication-access
   - ラボ08 MFA有効化
 - モジュール2 ユーザー認証のオプション(パスワードレス等)
   - [パスワードレス認証](../SC/passwordless.md)
-  - [OATH](../SC/oath.md)
-  - [FIDO](../SC/fido.md)
+  - [OATH](../SC/oath.md): 2004年～
+  - [FIDO](../SC/fido.md): 2012年～
   - [スマートロックアウト](../SC/smart-lockout.md)
     - ラボ12 Azure AD スマートロックアウト
   - セルフサービスパスワードリセット
