--- a/SC-300/lp02.md
+++ b/SC-300/lp02.md
@@ -25,12 +25,14 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-authentication-access
   - [Azure AD 条件付きアクセス](../SC/conditional-access.md)
   - ラボ13 条件付きアクセス
 - モジュール4 Identity Protection
-  - [Azure AD Identity Protection](../AZ-500/mod01-03-aad-idp.md)
+  - [Azure AD Identity Protection](https://github.com/hiryamada/notes/blob/main/AZ-500/mod01/mod01-03-idp.md)
+    - [Microsoft Sentinel + Identity Protection](../AZ-500/pdf/mod4/Microsoft%20Sentinel%20まとめ.pdf)
   - ラボ14/15 Azure AD Identity Protection
 - モジュール5 Azureリソースのアクセス管理
   - [Azureの認証と承認](../SC/pdf/Azureの認証と承認.pdf)
   - [マネージドID](../AZ-305/managed-id.md)
   - Key Vault アクセス ポリシー / RBAC
+    - Key Vault
   - ラボ11 Azureロール + PIM
   - ラボ16 Key Vault / マネージドID
 
