--- a/SC-300/lp02.md
+++ b/SC-300/lp02.md
@@ -32,7 +32,10 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-authentication-access
   - [Azureの認証と承認](../SC/pdf/Azureの認証と承認.pdf)
   - [マネージドID](../AZ-305/managed-id.md)
   - Key Vault アクセス ポリシー / RBAC
-    - Key Vault
+    - [Key Vault](../AZ-303/mod11-02-keyvault.md)
+  - Privileged Identity Management (PIM)
+    - ※PIMはラーニングパス4に含まれるのですが、ラボ11で関連するので先に触れます。
+    - [Azure AD Privileged Identity Management](../AZ-500/mod01/mod01-04-pim.md)
   - ラボ11 Azureロール + PIM
   - ラボ16 Key Vault / マネージドID
 
