--- a/SC-300/lp03.md
+++ b/SC-300/lp03.md
@@ -1,8 +1,69 @@
 [← ラーニングパス2](lp02.md)
 [→ ラーニングパス4](lp04.md)
 
+# ラーニングパス3 アプリのアクセス管理を実装する
 
-- ラーニングパス3 アプリのアクセス管理を実装する
-  - SSO
-  - エンタープライズアプリ
-  - アプリの登録
+■Microsoft Learn
+
+https://learn.microsoft.com/ja-jp/training/paths/implement-access-management-for-apps/
+
+■講義
+
+- モジュール1 エンタープライズ アプリの統合を計画し、設計する
+  - ユニット1～3, 7: 組織で使用しているアプリの監視・オンプレAD FSからの移行
+    - [Microsoft Defender for Cloud Apps](../SC/mdca.md)
+    - ラボ17/18 Microsoft Defender for Cloud Apps
+  - ユニット4: Azure ADへのアプリの追加・アプリの登録
+    - (Azure AD)[エンタープライズアプリケーションの追加](../SC/enterprise-app.md)
+    - (Azure AD)[アプリの登録](../SC/app-registration.md)
+    - ラボ19 アプリの登録
+    - ラボ20 アプリのアクセス管理（エンタープライズアプリケーション）
+  - ユニット5～6: ロールによる、アプリ管理の委任
+    - (Azure AD)[アプリの管理のためのロール、ロールの割り当て](../SC/app-role.md)
+- モジュール2 エンタープライズ アプリの統合を実装し、監視する
+  - [Microsoft ID プラットフォーム](../AZ-204/mod06-04-id-platform.md)
+  - [OAuth 2.0 / OpenID Connect](../general/oauth-oidc.md)
+  - [Microsoft Authentication Libraries(MSAL)](../AZ-204/mod06-02-msal.md)
+  - [Azure Active Directory アプリケーション プロキシ](../SC/application-proxy.md)
+  - [クロスドメイン ID 管理システム (SCIM)](../SC/scim.md)
+  - Azure Active Directory レポート
+    - 使用状況と分析情報
+      - https://learn.microsoft.com/ja-jp/azure/active-directory/reports-monitoring/concept-usage-insights-report
+  - アプリケーション コレクション
+- モジュール3 アプリの登録を実装する
+  - [同意のフレームワーク](../SC/consent-framework.md)
+  - アプリケーションの登録
+  - アクセス許可を構成する
+  - アプリケーションに管理者の同意を付与する
+  - アプリケーションの認可を実装する
+  - アプリケーションにアプリ ロールを追加する
+  - アプリ ガバナンスでアプリケーションを管理および監視する
+  - ラボ21 アプリケーションの同意
+
+■ ラボ手順書
+
+英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/tree/master/Instructions/Labs
+
+日本語翻訳版（若干古い可能性があります/番号重複注意）
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/tree/main/Instructions/Labs
+
+- [ラボ17](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_17_DefenderForCloudAppsDiscoveryAndRestrictions.md)
+- [ラボ18](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_18_DefenderForCloudAppsAccessPolicies.md)
+- [ラボ19](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_19_RegisterAnApplication.md)
+- [ラボ20](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_20_ImplementAccessManagementForApps.md)
+- [ラボ21](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_21_GrantTenantWideAdminConsentToAnApplication.md)
+
+■ ラボのファイル
+
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/archive/refs/heads/master.zip
+
+ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります。
+
+■ ラボの概要
+
+- ラボ17 Microsoft Defender for Cloud Apps
+- ラボ18 Microsoft Defender for Cloud Apps / アクセスポリシー
+- ラボ19 アプリの登録
+- ラボ20 アプリのアクセス管理（エンタープライズアプリケーション）
+- ラボ21 アプリケーションの同意
