--- a/SC-300/lp04.md
+++ b/SC-300/lp04.md
@@ -1,8 +1,34 @@
 [← ラーニングパス3](lp03.md)
 
-- ラーニングパス4 ID ガバナンス戦略を計画して実装する
-  - エンタイトルメント管理
-    - アクセスパッケージ
-  - アクセスレビュー
-  - PIM
-  - Azure ADの監視
+# ラーニングパス4 ID ガバナンス戦略を計画して実装する
+
+■Microsoft Learn
+
+https://learn.microsoft.com/ja-jp/training/paths/plan-implement-identity-governance-strategy/
+
+■講義
+
+
+- エンタイトルメント管理
+  - アクセスパッケージ
+- アクセスレビュー
+- PIM
+- Azure ADの監視
+
+
+■ ラボ手順書
+
+英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/tree/master/Instructions/Labs
+
+日本語翻訳版（若干古い可能性があります/番号重複注意）
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/tree/main/Instructions/Labs
+
+
+■ ラボのファイル
+
+https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/archive/refs/heads/master.zip
+
+ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります。
+
+■ ラボの概要
