--- a/SC-300/lp03.md
+++ b/SC-300/lp03.md
@@ -16,7 +16,6 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-access-management-for
   - ユニット4: Azure ADへのアプリの追加・アプリの登録
     - (Azure AD)[エンタープライズアプリケーションの追加](../SC/enterprise-app.md)
     - (Azure AD)[アプリの登録](../SC/app-registration.md)
-    - ラボ19 アプリの登録
     - ラボ20 アプリのアクセス管理（エンタープライズアプリケーション）
   - ユニット5～6: ロールによる、アプリ管理の委任
     - (Azure AD)[アプリの管理のためのロール、ロールの割り当て](../SC/app-role.md)
@@ -31,13 +30,16 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-access-management-for
       - https://learn.microsoft.com/ja-jp/azure/active-directory/reports-monitoring/concept-usage-insights-report
   - アプリケーション コレクション
 - モジュール3 アプリの登録を実装する
-  - [同意のフレームワーク](../SC/consent-framework.md)
-  - アプリケーションの登録
-  - アクセス許可を構成する
-  - アプリケーションに管理者の同意を付与する
-  - アプリケーションの認可を実装する
-  - アプリケーションにアプリ ロールを追加する
+  - アプリの登録
+    - [同意のフレームワーク](../SC/consent-framework.md)
+    - アプリケーションオブジェクト ... 「アプリの登録」画面で管理
+    - サービスプリンシパル ... 「エンタープライズ アプリケーション」画面で管理
+    - アプリケーションの登録
+    - アクセス許可を構成する
+    - アプリケーションに管理者の同意を付与する
+  - PDFまとめ: [Microsoft ID Platform](../SC/pdf/Microsoft%20ID%20Platform.pdf)
   - アプリ ガバナンスでアプリケーションを管理および監視する
+  - ラボ19 アプリの登録
   - ラボ21 アプリケーションの同意
 
 ■ ラボ手順書
@@ -64,6 +66,25 @@ https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/ar
 
 - ラボ17 Microsoft Defender for Cloud Apps
 - ラボ18 Microsoft Defender for Cloud Apps / アクセスポリシー
-- ラボ19 アプリの登録
+- ラボ19 アプリの登録/カスタムロール追加
+  - Exercise 1 Azure AD アプリの登録
+    - Azure AD＞アプリの登録＞＋新規登録
+    - 名前: Demo App、「登録」
+    - クイックスタート＞Web アプリケーション＞ASP.NET Core＞「この変更を行う」＞「更新する」
+    - 証明書とシークレット＞＋新しいクライアントシークレット＞追加、「値」をメモ帳にコピー
+    - APIの公開＞＋Scope の追加＞保存してから続ける
+      - スコープ名「Employees.Read.All」
+      - 同意: 管理者
+      - 管理者の同意の表示名「Read-only access to employee records」
+      - 管理者の同意の説明「Allow the application to have read-only access to all employee data.」
+      - 「スコープの追加」
+  - Exercise 2: Azure AD カスタムロールの追加
+    - ※シングル サインオンを有効にして適用するために必要な最低限のアクセス許可を持ったロールを作る
+    - Azure AD＞ロールと管理者
+    - ＋新しいカスタムロール
+    - 名前「My custom app role」、次へ
+    - 「credentials」で検索し、以下2つにチェック
+    - microsoft.directory/servicePrincipals/managePasswordSingleSignOnCredentials
+    - microsoft.directory/servicePrincipals/synchronizationCredentials/manage
 - ラボ20 アプリのアクセス管理（エンタープライズアプリケーション）
 - ラボ21 アプリケーションの同意
