--- a/SC-300/lp03.md
+++ b/SC-300/lp03.md
@@ -37,8 +37,8 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-access-management-for
     - アプリケーションの登録
     - アクセス許可を構成する
     - アプリケーションに管理者の同意を付与する
+  - [Microsoft Graph](../AZ-204/mod06-08-graph.md)
   - PDFまとめ: [Microsoft ID Platform](../SC/pdf/Microsoft%20ID%20Platform.pdf)
-  - アプリ ガバナンスでアプリケーションを管理および監視する
   - ラボ19 アプリの登録
   - ラボ21 アプリケーションの同意
 
