--- a/SC-300/lp03.md
+++ b/SC-300/lp03.md
@@ -42,6 +42,10 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-access-management-for
   - ラボ19 アプリの登録
   - ラボ21 アプリケーションの同意
 
+■講義（ラーニングパス4）
+
+- [Azure AD Privileged Identity Management](../SC/pim.md)
+
 ■ ラボ手順書
 
 英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
