--- a/SC-300/lp04.md
+++ b/SC-300/lp04.md
@@ -8,13 +8,19 @@ https://learn.microsoft.com/ja-jp/training/paths/plan-implement-identity-governa
 
 ■講義
 
-
-- エンタイトルメント管理
-  - アクセスパッケージ
-- アクセスレビュー
-- PIM
-- Azure ADの監視
-
+- モジュール1 エンタイトルメント管理を計画して実装する
+  - 「クラウドエンタイトルメント」とは?
+    https://www.scsk.jp/sp/sysdig/blog/container_security/ciem.html
+  - MS社員による記事:「AADエンタイトルメント管理とは？」
+    - https://qiita.com/zukakosan/items/bd03d294ac0b98faf064
+- モジュール2 アクセス レビューの計画、実装、管理
+  - [Azure ADアクセスレビュー](../AZ-303/mod10-02-access-review.md)
+- モジュール3 特権アクセスを計画し、実装する
+  - PDF: [Azure AD Privileged Identity Management](../SC/pim.md)
+- モジュール4 Azure Active Directory を監視および保守する
+  - [Azure ADサインインログ](../AZ-303/pdf/mod15/%E3%83%A1%E3%83%88%E3%83%AA%E3%83%83%E3%82%AF%E3%81%A8%E3%83%AD%E3%82%B0%E3%81%AE%E4%BE%8B.pdf)
+  - [Microsoft Sentinel](../AZ-500/pdf/mod4/Microsoft%20Sentinel%20まとめ.pdf)
+  - [Microsoft Defender for Cloud](../AZ-500/pdf/mod4/Microsoft%20Defender%20for%20Cloud%20まとめ.pdf)
 
 ■ ラボ手順書
 
@@ -24,11 +30,8 @@ https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/tr
 日本語翻訳版（若干古い可能性があります/番号重複注意）
 https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/tree/main/Instructions/Labs
 
-
 ■ ラボのファイル
 
 https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/archive/refs/heads/master.zip
 
 ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります。
-
-■ ラボの概要
