--- a/AZ-305/m09.md
+++ b/AZ-305/m09.md
@@ -10,6 +10,7 @@
 
 - [VPN](../AZ-303/mod03-03-vpn.md)
 - [ExpressRoute](../AZ-304/mod02-04-hybrid-network.md)
+  - [ExpressRoute Local](https://github.com/hiryamada/notes/blob/main/network/ExpressRoute%20Local.pdf)
 
 ■アプリケーション配信(負荷分散)
 
@@ -38,7 +39,7 @@
 - [Azure DDos Protection](../network/ddos-protection.md)
 - [ネットワークセキュリティグループ(NSG) / アプリケーションセキュリティグループ(ASG)](../AZ-303/mod05-05-nsg-asg.md)
 - [Azure Firewall](../AZ-303/mod05-06-azure-firewall.md)
-  - [NSGとAzure Firwallの違い](https://jpaztech.github.io/blog/network/difference-nsg-fw/)
+  - [NSGとAzure Firwallの違い](https://jpaztech.github.io/blog/network/difference-nsg-fw/#NSG-%E3%81%A8-Azure-Firewall-%E3%81%AE%E6%A9%9F%E8%83%BD%E6%AF%94%E8%BC%83)
 
 知識チェック:
 
