--- a/AI-102/lp03.md
+++ b/AI-102/lp03.md
@@ -41,7 +41,10 @@ dotnet user-secrets set 'CognitiveServices:SubscriptionRegion' '...'
 https://learn.microsoft.com/ja-jp/dotnet/fundamentals/code-analysis/quality-rules/ca1822
 
 ```
+root = true
+
 [*.cs]
+# supress 'Member ... does not access instance data and can be marked as static'
 dotnet_diagnostic.CA1822.severity = none
 ```
 
