--- a/SC-300/lp04.md
+++ b/SC-300/lp04.md
@@ -9,8 +9,7 @@ https://learn.microsoft.com/ja-jp/training/paths/plan-implement-identity-governa
 ■講義
 
 - モジュール1 エンタイトルメント管理を計画して実装する
-  - 「クラウドエンタイトルメント」とは?
-    https://www.scsk.jp/sp/sysdig/blog/container_security/ciem.html
+  - [エンタイトルメント管理](../SC/entitlement.md)
   - MS社員による記事:「AADエンタイトルメント管理とは？」
     - https://qiita.com/zukakosan/items/bd03d294ac0b98faf064
 - モジュール2 アクセス レビューの計画、実装、管理
