--- a/SC-300/lp01.md
+++ b/SC-300/lp01.md
@@ -38,6 +38,7 @@
   - ラボ 05（ゲストユーザーの招待）
 - モジュール4 ハイブリッド ID を実装および管理する
   - [Azure AD Connect](../AZ-303/mod02-01-hybridid.md)
+  - [プライマリ更新トークン (Primary Refresh Token、PRT)](../SC/PRT.md)
 
 
 
