--- a/SC-300/lp02.md
+++ b/SC-300/lp02.md
@@ -47,6 +47,8 @@ https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/tr
 日本語翻訳版（若干古い可能性があります/番号重複注意）
 https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/tree/main/Instructions/Labs
 
+日本語翻訳版の、正しい番号の手順書へのリンク:
+
 - [ラボ08](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_08_EnableAzureADMultiFactorAuthentication.md)
 - [ラボ09](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_09_ConfigureAndDeploySelfServicePasswordReset.md)
 - [ラボ10](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_10_AzureADAuthenticationForWindowsAndLinuxVM.md)
