--- a/SC-300/lp03.md
+++ b/SC-300/lp03.md
@@ -54,6 +54,8 @@ https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/tr
 日本語翻訳版（若干古い可能性があります/番号重複注意）
 https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/tree/main/Instructions/Labs
 
+日本語翻訳版の、正しい番号の手順書へのリンク:
+
 - [ラボ17](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_17_DefenderForCloudAppsDiscoveryAndRestrictions.md)
 - [ラボ18](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_18_DefenderForCloudAppsAccessPolicies.md)
 - [ラボ19](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_19_RegisterAnApplication.md)
