--- a/SC-300/lp04.md
+++ b/SC-300/lp04.md
@@ -12,14 +12,20 @@ https://learn.microsoft.com/ja-jp/training/paths/plan-implement-identity-governa
   - [エンタイトルメント管理](../SC/entitlement.md)
   - MS社員による記事:「AADエンタイトルメント管理とは？」
     - https://qiita.com/zukakosan/items/bd03d294ac0b98faf064
+  - ラボ22 Azure AD エンタイトルメント管理
+  - ラボ24 Identity Governance（外部ユーザーのライフサイクルの管理）
 - モジュール2 アクセス レビューの計画、実装、管理
   - [Azure ADアクセスレビュー](../AZ-303/mod10-02-access-review.md)
+  - ラボ25 Azure AD アクセスレビュー
 - モジュール3 特権アクセスを計画し、実装する
   - PDF: [Azure AD Privileged Identity Management](../SC/pim.md)
+  - ラボ26 Azure AD Privileged Identity Management
 - モジュール4 Azure Active Directory を監視および保守する
   - [Azure ADサインインログ](../AZ-303/pdf/mod15/%E3%83%A1%E3%83%88%E3%83%AA%E3%83%83%E3%82%AF%E3%81%A8%E3%83%AD%E3%82%B0%E3%81%AE%E4%BE%8B.pdf)
   - [Microsoft Sentinel](../AZ-500/pdf/mod4/Microsoft%20Sentinel%20まとめ.pdf)
+  - ラボ27 Microsoft Sentinel (KQL)
   - [Microsoft Defender for Cloud](../AZ-500/pdf/mod4/Microsoft%20Defender%20for%20Cloud%20まとめ.pdf)
+  - ラボ28 Microsoft Defender for Cloud (セキュアスコア)
 
 ■ ラボ手順書
 
@@ -28,6 +34,16 @@ https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/tr
 
 日本語翻訳版（若干古い可能性があります/番号重複注意）
 https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/tree/main/Instructions/Labs
+
+日本語翻訳版の、正しい番号の手順書へのリンク:
+
+- [ラボ22 Azure ADエンタイトルメント管理](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_22_CreateAndManageACatalogOfResourcesInAADEntitlementManagement.md)
+- [ラボ23 Azure AD 利用規約ポリシー](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_23_AddTermsOfUseAcceptanceReporting.md)
+- [ラボ24 Identity Governance（外部ユーザーのライフサイクルの管理）](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_24_ManageTheLifecycleOfExternalUsersInAADIdentityGovernanceSettings%20.md)
+- [ラボ25 Azure ADアクセスレビュー](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_25_CreatingAccessReviewsForUsers.md)
+- [ラボ26 Azure AD Privileged Identity Management](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_26_ConfigurePrivilegedIdentityManagementForAADRoles.md)
+- [ラボ27 Microsoft Sentinel (KQL)](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_27_MicrosoftSentinelKustoQueries.md)
+- [ラボ28 Microsoft Defender for Cloud (セキュアスコア)](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_28_MonitorIdentitySecureScore.md)
 
 ■ ラボのファイル
 
