--- a/SC-300/lp02.md
+++ b/SC-300/lp02.md
@@ -34,9 +34,8 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-authentication-access
   - Key Vault アクセス ポリシー / RBAC
     - [Key Vault](../AZ-303/mod11-02-keyvault.md)
   - Privileged Identity Management (PIM)
-    - ※PIMはラーニングパス4に含まれるのですが、ラボ11で関連するので先に触れます。
-    - [Azure AD Privileged Identity Management](../AZ-500/mod01/mod01-04-pim.md)
-  - ラボ11 Azureロール + PIM
+    - →ラーニングパス4で解説。
+  - ラボ11 Azureロール + PIM→ラーニングパス4学習後に実施。
   - ラボ16 Key Vault / マネージドID
 
 ■ ラボ手順書
