--- a/SC-300/lp04.md
+++ b/SC-300/lp04.md
@@ -19,13 +19,18 @@ https://learn.microsoft.com/ja-jp/training/paths/plan-implement-identity-governa
   - ラボ25 Azure AD アクセスレビュー
 - モジュール3 特権アクセスを計画し、実装する
   - PDF: [Azure AD Privileged Identity Management](../SC/pim.md)
-  - ラボ26 Azure AD Privileged Identity Management
+  - ラボ11 Azure ロール + PIM
+  - ラボ26 Azure ADロール + PIM
 - モジュール4 Azure Active Directory を監視および保守する
   - [Azure ADサインインログ](../AZ-303/pdf/mod15/%E3%83%A1%E3%83%88%E3%83%AA%E3%83%83%E3%82%AF%E3%81%A8%E3%83%AD%E3%82%B0%E3%81%AE%E4%BE%8B.pdf)
+  - [Log Analytics](../log-analytics/log-analytics.md)
   - [Microsoft Sentinel](../AZ-500/pdf/mod4/Microsoft%20Sentinel%20まとめ.pdf)
   - ラボ27 Microsoft Sentinel (KQL)
+  - [Microsoft Defender for Cloud/servers/Endpoint](../AZ-500/pdf/mod4/Microsoft%20Defender%20for%20Cloud%2C%20servers%2C%20Endpoint.pdf)
   - [Microsoft Defender for Cloud](../AZ-500/pdf/mod4/Microsoft%20Defender%20for%20Cloud%20まとめ.pdf)
   - ラボ28 Microsoft Defender for Cloud (セキュアスコア)
+- おまけ（SC-300の範囲外）
+  - [Microsoft Security Copilot](../microsoft-security-copilot/microsoft-security-copilot.md)
 
 ■ ラボ手順書
 
@@ -36,7 +41,7 @@ https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/tr
 https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/tree/main/Instructions/Labs
 
 日本語翻訳版の、正しい番号の手順書へのリンク:
-
+- [ラボ11 Privileged Identity Management で Azure リソース ロールを割り当てる](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_11_AssignAzureResourceRolesInPrivilegedIdentityManagement.md)
 - [ラボ22 Azure ADエンタイトルメント管理](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_22_CreateAndManageACatalogOfResourcesInAADEntitlementManagement.md)
 - [ラボ23 Azure AD 利用規約ポリシー](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_23_AddTermsOfUseAcceptanceReporting.md)
 - [ラボ24 Identity Governance（外部ユーザーのライフサイクルの管理）](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_24_ManageTheLifecycleOfExternalUsersInAADIdentityGovernanceSettings%20.md)
