--- a/SC-300/lp04.md
+++ b/SC-300/lp04.md
@@ -27,7 +27,7 @@ https://learn.microsoft.com/ja-jp/training/paths/plan-implement-identity-governa
   - [Microsoft Sentinel](../AZ-500/pdf/mod4/Microsoft%20Sentinel%20まとめ.pdf)
   - ラボ27 Microsoft Sentinel (KQL)
   - [Microsoft Defender for Cloud/servers/Endpoint](../AZ-500/pdf/mod4/Microsoft%20Defender%20for%20Cloud%2C%20servers%2C%20Endpoint.pdf)
-  - [Microsoft Defender for Cloud](../AZ-500/pdf/mod4/Microsoft%20Defender%20for%20Cloud%20まとめ.pdf)
+  - [Microsoft Defender for Cloud](../AZ-500/pdf/mod4/Microsoft%20Defender%20for%20Cloud%20まとめv2.pdf)
   - ラボ28 Microsoft Defender for Cloud (セキュアスコア)
 - おまけ（SC-300の範囲外）
   - [Microsoft Security Copilot](../microsoft-security-copilot/microsoft-security-copilot.md)
