--- a/SC-300/lp04.md
+++ b/SC-300/lp04.md
@@ -31,6 +31,7 @@ https://learn.microsoft.com/ja-jp/training/paths/plan-implement-identity-governa
   - ラボ28 Microsoft Defender for Cloud (セキュアスコア)
 - おまけ（SC-300の範囲外）
   - [Microsoft Security Copilot](../microsoft-security-copilot/microsoft-security-copilot.md)
+  - [西日本リージョンの最新情報](../general/japanwest-region.md)
 
 ■ ラボ手順書
 
